--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div>
               <h3 class="home__info-title">YEARS OF EXPERIENCE</h3>
 
-              <p class="home__info-number">04+</p>
+              <p class="home__info-number">05+</p>
             </div>
 
             <div>
@@ -383,8 +383,8 @@
               </div>
 
               <div>
-                <h3 class="qualification__name">English Tutor</h3>
-                <span class="qualification__country">Reading Tots</span>
+                <h3 class="qualification__name">Private English Tutor</h3>
+                <span class="qualification__country">Self-Employed</span>
                 <span class="qualification__year">2021 - Present</span>
               </div>
             </div>
