Adding Project links

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                   <span class="projects__subtitle">Web</span>
                   <h1 class="projects__title">Snake Game</h1>
 
-                  <a href="#" class="projects__button">
+                  <a href="https://edselscott.github.io/React-Snake-Game/" class="projects__button">
                     View demo <i class="ri-arrow-right-line"></i>
                   </a>
                 </div>
@@ -510,7 +510,24 @@
                   <span class="projects__subtitle">Web</span>
                   <h1 class="projects__title">Tindog</h1>
 
-                  <a href="#" class="projects__button">
+                  <a href="https://edselscott.github.io/TinDog/" class="projects__button">
+                    View demo <i class="ri-arrow-right-line"></i>
+                  </a>
+                </div>
+              </div>
+
+              <div class="projects__content swiper-slide">
+                <img
+                  src="assets/img/Budgetly.png"
+                  alt="projects image"
+                  class="projects__img"
+                />
+  
+                <div>
+                  <span class="projects__subtitle">React App</span>
+                  <h1 class="projects__title">Budgetly</h1>
+  
+                  <a href="https://budgetmesoftly-v1.onrender.com/" class="projects__button">
                     View demo <i class="ri-arrow-right-line"></i>
                   </a>
                 </div>
