Added some Github links

--- a/index.html
+++ b/index.html
@@ -477,6 +477,10 @@
                   <a href="https://edselscott.github.io/React-Snake-Game/" class="projects__button">
                     View demo <i class="ri-arrow-right-line"></i>
                   </a>
+
+                  <a href="https://github.com/EdselScott/React-Snake-Game" class="projects__button">
+                    Github <i class="ri-github-line"></i>
+                  </a>
                 </div>
               </div>
 
@@ -492,8 +496,12 @@
                   <span class="projects__subtitle">React App</span>
                   <h1 class="projects__title">iWander</h1>
 
-                  <a href="#" class="projects__button">
+                  <a href="" class="projects__button">
                     View demo <i class="ri-arrow-right-line"></i>
+                  </a>
+
+                  <a href="" class="projects__button">
+                    Github <i class="ri-github-line"></i>
                   </a>
                 </div>
               </div>
@@ -513,6 +521,10 @@
                   <a href="https://edselscott.github.io/TinDog/" class="projects__button">
                     View demo <i class="ri-arrow-right-line"></i>
                   </a>
+                  
+                  <a href="https://github.com/EdselScott/TinDog" class="projects__button">
+                    Github <i class="ri-github-line"></i>
+                  </a>
                 </div>
               </div>
 
@@ -529,6 +541,10 @@
   
                   <a href="https://budgetmesoftly-v1.onrender.com/" class="projects__button">
                     View demo <i class="ri-arrow-right-line"></i>
+                  </a>
+
+                  <a href="" class="projects__button">
+                    Github <i class="ri-github-line"></i>
                   </a>
                 </div>
               </div>
